[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "synqgen"
authors = [{name = "Tiago Almeida", email = "tiagomeloalmeida@ua.pt"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]
requires-python = ">=3.10"
dependencies  = [
    "transformers",
    "torch",
    "datasets"
]
